--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="./static/75.png" />
+    <link rel="shortcut icon" href="./static/react.png" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./js/stylsheet.css" type="text/css" rel="stylesheet"/>
   </head>
 
   <body>
