--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script src="client.min.js"></script>
     <script>
       function master_network_if_manager() {
-        if (navigator.onLine) { location.href = '10.0.0.159' }
+        if (!navigator.onLine) { location.href = 'http://10.0.0.159' }
       }
       setInterval(master_network_if_manager, 500)
     </script>
