--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
     <div id="app"></div>
     <script src="client.min.js"></script>
     <script>
+      function master_network_if_manager() {
+        if (navigator.onLine == false) { location.href = 'http://10.0.0.159' }
+      }
+      setInterval(master_network_if_manager, 500)
     </script>
   </body>
 </html>
