--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; bottom: 0; position: relative;">
   <head>
     <link rel="shortcut icon" href="./static/react.png" />
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
